--- a/HMSWebSalerClient/src/login_ui/WebStrategy.fxml
+++ b/HMSWebSalerClient/src/login_ui/WebStrategy.fxml
@@ -8,16 +8,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-	<children>
-      <TreeTableView layoutX="64.0" layoutY="82.0" prefHeight="286.0" prefWidth="507.0">
-         <columns>
-            <TreeTableColumn prefWidth="148.0" text="名称" />
-            <TreeTableColumn prefWidth="138.0" text="时间" />
-            <TreeTableColumn prefWidth="123.0" text="折扣额" />
-            <TreeTableColumn prefWidth="97.0" text="操作(修改/删除)" />
-         </columns>
-      </TreeTableView>
-      <Button layoutX="511.0" layoutY="401.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="96.0" text="新增" />
+   <children>
+      <AnchorPane fx:id="OrderTable" layoutX="4.0" layoutY="52.0" prefHeight="347.0" prefWidth="614.0">
+         <children>
+            <fx:include source="WebStrategyTableUI.fxml" />
+         </children>
+      </AnchorPane>
+      <Hyperlink layoutX="436.0" layoutY="25.0" text="新增(date)" />
+      <Hyperlink layoutX="523.0" layoutY="25.0" text="新增(CBD)" />
    </children>
 </AnchorPane>
